--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LarLa</string>
-
-    <!-- Strings related to login -->
     <string name="prompt_email">Matrix username</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -22,4 +21,7 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="hint_enter_a_message" />
+    <string name="userId">Matrix user id</string>
+    <string name="userName">User name</string>
+
 </resources>
